--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/Discount/_css/main.css">
+    <!-- <link rel="stylesheet" media='screen and (min-width: 200px) and (max-width: 400px)' href='mobileMain.css' /> -->
+
+    <style>
+        .contain{
+            margin-left: 0px !important;
+        }
+    </style>
 
     <title>Discount - Login</title>
 </head>
@@ -20,9 +27,11 @@
     <main class="contain">
         <div class="row">
 
-            <div class="col-8"></div>
+            <div class="col-sm-8">
+                <img src="/Discount/_img/bgIMG.jpg" alt="" class="w-100">
+            </div>
 
-            <div class="col-4">
+            <div class="col-sm-4">
 
                 <div class="row-12">
                     <div class="formPad">
@@ -44,11 +53,11 @@
 
                             <div class="form-group">
                                 <div class="row">
-                                    <div class="col-6">
-                                        <a href="">Επαναφορά κωδικού</a>
+                                    <div class="col-sm-6">
+                                        <a href="" class="left">Επαναφορά κωδικού</a>
                                     </div>
-                                    <div class="col-6">
-                                        <a href="/Discount/templates/register.html" class="float-right">Δημιουργία λογαριασμού</a>
+                                    <div class="col-sm-6">
+                                        <a href="/Discount/templates/register.html" class="float-right left">Δημιουργία λογαριασμού</a>
                                     </div>
                                 </div>
 
@@ -64,11 +73,11 @@
 
     <footer>
         <div class="row">
-            <div class="col-6">
-                <span class="labelFill">Copyright ©2020 All rights reserved!</span>
+            <div class="col-sm-6">
+                <span class="labelFill centered">Copyright ©2020 All rights reserved!</span>
             </div>
-            <div class="col-6">
-                <span class="labelFill float-right">Terms & Conditions | Register | Privacy</span>
+            <div class="col-sm-6">
+                <span class="labelFill float-right centered">Terms & Conditions | Register | Privacy</span>
 
             </div>
         </div>
