--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     <link rel="stylesheet" href="/Discount/_css/main.css">
     <!-- <link rel="stylesheet" media='screen and (min-width: 200px) and (max-width: 400px)' href='mobileMain.css' /> -->
 
-    <style>
-        .contain{
-            margin-left: 0px !important;
-        }
-    </style>
+    
 
     <title>Discount - Login</title>
 </head>
@@ -28,7 +24,7 @@
         <div class="row">
 
             <div class="col-sm-8">
-                <img src="/Discount/_img/bgIMG.jpg" alt="" class="w-100">
+                <img src="/Discount/_img/bgIMG.jpg" alt="">
             </div>
 
             <div class="col-sm-4">
